telecom-bretagne/javacompiler/SecondPhase/tests/Good/testCallVarmethod.java
class B{
	
	int a1;

}

class A extends B{
	int a2;

	void test(int a3){
		int a4=2;
		int b = a3;
	}

}