telecom-bretagne/javacompiler/SecondPhase/tests/Fail/TestDupMethodFails2.java
class A {}
class B {
	private int m(int x){}
	public void m(int x){}
}
